force-app/main/default/objects/Conflict_Check_Log__c/Conflict_Check_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks conflict check searches performed on leads</description>
    <label>Conflict Check Log</label>
    <nameField>
        <displayFormat>CCL-{0000000}</displayFormat>
        <label>Conflict Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conflict Check Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>