force-app/main/default/objects/Conflict_Check_Log__c/fields/Highest_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Highest_Risk_Score__c</fullName>
    <description>Highest risk score among all matches</description>
    <label>Highest Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>