force-app/main/default/objects/Conflict_Check_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lead this conflict check was performed for</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Conflict Checks</relationshipLabel>
    <relationshipName>Conflict_Check_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>