force-app/main/default/objects/Conflict_Check_Log__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who performed the conflict check</description>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conflict_Checks_Performed</relationshipName>
    <type>Lookup</type>
</CustomField>