force-app/main/default/objects/Conflict_Check_Log__c/fields/Performed_Date__c.field-meta.xml
<CustomField>
    <fullName>Performed_Date__c</fullName>
    <description>Date and time the conflict check was performed</description>
    <label>Performed Date</label>
    <type>DateTime</type>
</CustomField>