force-app/main/default/objects/Conflict_Check_Log__c/fields/Search_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Business_Name__c</fullName>
    <description>Business/company name searched for in the conflict check</description>
    <label>Search Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>