force-app/main/default/objects/Conflict_Check_Log__c/fields/Search_Email__c.field-meta.xml
<CustomField>
    <fullName>Search_Email__c</fullName>
    <description>Email searched for in the conflict check</description>
    <label>Search Email</label>
    <type>Email</type>
</CustomField>