force-app/main/default/objects/Conflict_Check_Log__c/fields/Search_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Name__c</fullName>
    <description>Name searched for in the conflict check</description>
    <label>Search Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>