force-app/main/default/objects/Conflict_Check_Log__c/fields/Search_Phone__c.field-meta.xml
<CustomField>
    <fullName>Search_Phone__c</fullName>
    <description>Phone number searched for in the conflict check</description>
    <label>Search Phone</label>
    <type>Phone</type>
</CustomField>