force-app/main/default/objects/Conflict_Check_Log__c/fields/Total_Matches__c.field-meta.xml
<CustomField>
    <fullName>Total_Matches__c</fullName>
    <description>Total number of conflict matches found</description>
    <label>Total Matches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>